# Humanoid-Motion-Diffusion

./: .gitignore  README.md  config.yaml  download_aist_audio_official.py  kaggle_bridge.ipynb  kaggle_showcase_main.py  main_colab.ipynb  phase1_aist_kaggle.ipynb  pyproject.toml  requirements.txt  run_pipeline.py  test_evaluation_rigor.ipynb  training_tutorial.ipynb
configs/: base.yaml  kaggle_prod.yaml  testing.yaml
docs/: RESEARCH_REPORT.md  SIM_TO_REAL_GUIDE.md  notebook_cleanup.md  sim_to_real.md
embodied_motion_flow/: __init__.py  config.py  reproducibility.py
embodied_motion_flow/audio/: __init__.py  audio_processor.py
embodied_motion_flow/cli/: __init__.py  check_audio_conditioning.py  evaluate.py  generate_data.py  train.py  visualize_results.py
embodied_motion_flow/data/: __init__.py  aist_loader.py  dataset.py  synthetic_generator.py
embodied_motion_flow/diagnostics/: __init__.py  failure_analysis.py
embodied_motion_flow/evaluation/: __init__.py  anomaly.py  metrics.py  runner.py
embodied_motion_flow/generation/: __init__.py  sampling.py
embodied_motion_flow/losses/: __init__.py  biomechanical.py
embodied_motion_flow/models/: __init__.py  cross_attention_diffusion.py  diffusion.py  (+2 more)
scripts/: run_eval.sh  run_train.sh
tests/: test_aist_loader.py  test_audio_processor.py  test_biomechanical_loss.py  test_cfg_ema_sampling.py  test_config_profiles.py  test_cross_attention_diffusion.py  test_diffusion_scheduler.py  test_diffusion_steps.py  test_evaluation_metrics.py  test_failure_analysis.py  test_smpl_render.py  test_smpl_renderer.py
(+22 files in other folders)
